# sns-system-public

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  tarpaulin-report.html
.devcontainer/for-nextjs/: devcontainer-lock.json  devcontainer.json
.devcontainer/for-rust/: devcontainer-lock.json  devcontainer.json
.github/workflows/: AGENTS.md  README.md  sns-system-api-cicd.yaml  sns-system-auth-cicd.yaml  sns-system-core-cicd.yaml  sns-system-db-cicd.yaml  sns-system-frontend-cicd.yaml  sns-system-review-cicd.yaml
api/: AGENTS.md  CONTRIBUTING.md  README.md  TODO.md  openapi.yaml  template.yaml
api/lambda/: Cargo.toml
api/lambda/src/: auth.rs  db.rs  error.rs  http.rs  lib.rs  main.rs
api/lambda/src/application/: get_timeline.rs  mod.rs  post_message.rs  repository.rs
api/lambda/src/application/use_cases/: get_messages.rs  mod.rs  post_message.rs
api/lambda/src/domain/: message.rs  mod.rs
api/lambda/src/infrastructure/: dsql_message_repository.rs  mod.rs
api/lambda/src/infrastructure/db/: connection.rs  message_repository.rs  mod.rs
api/lambda/src/interface/: handler.rs  mod.rs
auth/: AGENTS.md  README.md  TODO.md  template.yaml
auth/PreSignUpFunction/: Cargo.toml
auth/PreSignUpFunction/src/: app.rs  lib.rs  main.rs
core/: .gitignore  AGENTS.md  Cargo.toml  TODO.md
core/common/: Cargo.toml
core/common/src/: clock.rs  error.rs  lib.rs
core/domain/: Cargo.toml
core/domain/src/: auth.rs  lib.rs  message.rs  repository.rs
core/infrastructure/: Cargo.toml
core/infrastructure/db/: Cargo.toml
core/infrastructure/db/src/: db_dsql.rs  db_postgres.rs  lib.rs
core/infrastructure/lambda/: Cargo.toml
core/infrastructure/lambda/src/: lambda_auth_repository.rs  lambda_executor.rs  lib.rs
core/infrastructure/sea_orm/: Cargo.toml
core/infrastructure/sea_orm/src/: lib.rs  sea_orm_message_repository.rs
core/infrastructure/src/: db.rs  db_dsql.rs  db_postgres.rs  lib.rs  sea_orm_message_repository.rs
core/src/: lib.rs
core/src/common/: error.rs  mod.rs
core/src/domain/: message.rs  mod.rs  repository.rs
core/src/usecase/: mod.rs  post_message.rs  timeline.rs
core/usecase/: Cargo.toml
core/usecase/src/: lib.rs  post_message.rs  timeline.rs
db/: AGENTS.md  README.md  TODO.md  template.yaml
db/liquibase/: AGENTS.md  changelog.xml
db/liquibase/changes/: 0001_create_lambda_role_local.sql  0001_create_messages.sql  0001_create_messages_table.sql  0001_init.sql  0002_create_lambda_role_develop_release.sql  0003_grant_lambda_role_iam.sql  0004_create_messages_table.sql  0005_comment_messages_table.sql  0006_comment_messages_id.sql  0007_comment_messages_user_name.sql  0008_comment_messages_cognito_id.sql  0009_comment_messages_created_at.sql  0010_comment_messages_body.sql  0011_comment_messages_row_log.sql  0012_comment_messages_is_from_user.sql  0013_create_messages_index_local.sql  0014_create_messages_index_dsql.sql  0015_grant_insert_messages.sql  0016_create_messages_latest_view.sql  0017_comment_messages_latest_view.sql  0018_comment_messages_latest_user_name.sql  0019_comment_messages_latest_created_at.sql  0020_comment_messages_latest_body.sql  0021_comment_messages_latest_is_from_user.sql  0022_grant_select_messages_latest.sql  0023_grant_select_messages.sql
db/sea_orm_entities/: Cargo.toml
db/sea_orm_entities/src/: lib.rs
db/sea_orm_entities/src/entity/: messages.rs  mod.rs  prelude.rs
docs/: AGENTS.md  HUMAN_README.md  README.md  SUMMARY.md  TODO.md  api.md  auth.md  cicd.md  core.md  db.md  faq.md  frontend.md  history.md  review.md  versions.md
frontend/: .gitignore  AGENTS.md  README.md  TODO.md  jest.config.ts  next.config.ts  package-lock.json  package.json  template.yaml  tsconfig.json  typedoc.json
frontend/.storybook/: main.ts  preview.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/public/: 403.html
frontend/src/components/: Footer.tsx  Header.tsx  Menu.tsx  Toast.tsx  page-sections.test.tsx  page-sections.tsx  site-shell.tsx
frontend/src/components/pages/: ChatPage.tsx  LoginPage.tsx  MyPage.tsx  TermsPage.tsx  TopPage.tsx
frontend/src/containers/: sns-app.tsx
frontend/src/hooks/: useHashRouter.ts
frontend/src/lib/: amplify.ts  api.ts  routes.test.ts  routes.ts
frontend/src/services/: amplify.ts  auth.ts  chat-api.test.ts  chat-api.ts
frontend/src/stories/components/: ChatPage.stories.ts  Footer.stories.ts  Header.stories.ts  Menu.stories.ts  TermsPage.stories.ts  Toast.stories.ts  TopPage.stories.ts
frontend/src/types/: api.ts  app.ts
frontend/test/: api.test.ts  useHashRouter.test.ts
review/: AGENTS.md  README.md  TODO.md  template.yaml
