[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[workspace]
members = [
  "core/common",
  "core/domain",
  "core/usecase",
  "core/infrastructure/db",
  "auth/PreSignUpFunction",
  "api/lambda",
  "core/infrastructure/sea_orm",
  "core/infrastructure/lambda",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "1", features = ["serde", "v7"] }
anyhow = "1.0.103"
aurora-dsql-sqlx-connector = { version = "0.1.2", features = ["pool"] }
tracing = "0.1.44"
