[workspace]
members = ["common", "domain", "usecase", "infrastructure"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "1", features = ["serde", "v7"] }
