[package]
name = "sns_api_lambda"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
aurora-dsql-sqlx-connector = { version = "0.2.1", features = ["pool"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.17"
lambda_runtime = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sns_core = { path = "../../core" }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["serde", "v7"] }
