[package]
name = "pre-sign-up"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
lambda_runtime = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
