[package]
name = "pre-sign-up"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "3"
panic = "abort"
strip = true

[dependencies]
aws_lambda_events = { version = "1.2.0", features = ["cognito"] }
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
serde_json = "1.0.150"
