[package]
name = "pre-sign-up"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
core_domain = { path = "../../core/domain" }
core_infrastructure_lambda = { path = "../../core/infrastructure/lambda" }
aws_lambda_events = { version = "1.2.0", features = ["cognito"] }
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
serde_json = "1.0.150"
