[package]
name = "core_infrastructure"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
core_common = { path = "../common" }
core_domain = { path = "../domain" }
sea-orm.workspace = true
sea_orm_entities = { path = "../../db/sea_orm_entities" }
uuid.workspace = true
