[package]
name = "core_infrastructure_lambda"
version = "0.1.0"
edition = "2024"

[lib]
name = "core_infrastructure_lambda"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws_lambda_events = "1.2.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
core_domain = { path = "../../domain" }
lambda_http = "0.14"
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
http = "1"
tokio = { version = "1", features = ["macros", "rt"] }
