[package]
name = "core_infrastructure_sea_orm"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.103"
async-trait.workspace = true
aurora-dsql-sqlx-connector = { version = "0.1.2", features = ["pool"] }
chrono.workspace = true
core_common = { path = "../../common" }
core_domain = { path = "../../domain" }
core_infrastructure_db = { path = "../db" }
sea-orm.workspace = true
sea_orm_entities = { path = "../../../db/sea_orm_entities" }
tracing = "0.1.44"
uuid.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
core_usecase = { path = "../../usecase" }
